argocd/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /user(/|$)(.*)
            backend:
              service:
                name: user-service
                port:
                  number: 80
    - http:
        paths:
          - pathType: Prefix
            path: /tour(/|$)(.*)
            backend:
              service:
                name: tour-service
                port:
                  number: 80
    - http:
        paths:
          - pathType: Prefix
            path: /chat(/|$)(.*)
            backend:
              service:
                name: chat-service
                port:
                  number: 80
